Revert "Remove preview features"
This reverts commit 89a9439d8db6eacac82e22acde899478725c5cf0.